[package]
name = "escrow"
version = "0.2.0"
authors = ["<golnar@soarrobotics.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.14.0"
cw2 = "0.14.0"
cw20 = "0.14.0"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.4"
k256 = { version = "0.11",  default-features = false, features = ["ecdsa"] }

[dev-dependencies]
cosmwasm-schema = "1.1.2"
cw-multi-test = "0.14.0"
cw20-base = { version = "0.14.0", features = ["library"] }
hex-literal = "0.3.1"

